--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -3,7 +3,7 @@
 <%-include('../partials/flash')%>
 
 
-<div class="row" style="margin-top: 0;">
+<div class="row" style="margin-top: 60px;">
     <div class="col-6 mx-auto  shadow w-25 h-50 p-2 mb-5 bg-body-light rounded">
         <h1 class="display-5">Sign up</h1>
         <form action="/register" method="POST">
