--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <!-- Remove the container if you want to extend the Footer to full width. -->
-<div class=" my-5 " style="width: 100vw;">
+<div class=" my-5 " style="width: 100%;">
 
     <!-- Footer -->
     <footer
