--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -3,7 +3,7 @@
 <%-include('../partials/flash')%>
 
 
-<div class="row products vh-75">
+<div class="row products vh-75" style="margin-top: 40px;">
     <div class="col-lg-6 mt-3">
       <div class="card mx-auto position-relative " style="width: 16.2rem; height: 410px;">
         <img src="<%= foundProduct.img %>" class="card-img-top " style="width: 100%;" alt="">
