--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,8 +6,8 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 body{
-  /* overflow-x: hidden; */
-  width: 100vw;
+  overflow-x: hidden;
+  /* width: 100vw; */
 }
 
 
@@ -41,6 +41,13 @@ main{
   color: white;
 }
 
+.nav1{
+  box-shadow: 0 4px 12px 0 rgba(0,0,0,.05);
+  background-color: #7c4dff;
+   color: #fff; 
+   width: 100%;
+    height: 65px;
+}
 .navbar-brand {
   font-family: "Orbitron", sans-serif;
   letter-spacing: 0.1em;
@@ -203,8 +210,10 @@ footer{
   }
 
 
-
-
+.text{
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  
+}
 
 
   /*======================
