--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -1,5 +1,5 @@
 <%if(success && success.length){%>
-    <div class="alert alert-success alert-dismissible fade show" role="alert" style="margin-top: 10px;">
+    <div class="alert alert-success alert-dismissible fade show ms-2 " role="alert" style="margin-top: 45px; position: absolute;">
         <strong><%=success%></strong>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
