--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -2,7 +2,7 @@
 
 <%-include('../partials/flash')%>
 
-    <h1 class="text-center fs-1 fw-semibold"> Products</h1>
+    <h1 class="text-center fs-1 fw-semibold text mx-auto" style="margin-top: 60px;"> Products</h1>
     <div class="row justify-content-around">
         <div class="category col-2   shadow-sm  h-50 p-2 mb-5 bg-body-light rounded " style="margin-left: 1.5rem; width: 200px;">
             <form class="checked" action="/products">
@@ -36,7 +36,7 @@
                          <div  class="card-body p-2  " style="margin-top: -1.20rem;">
                             <h5 class="card-title d-flex justify-content-between align-items-center mb-1">
                                 <span><%= item.name%></span> 
-                                <span class="btn like-btn" product-id="<%=item._id%>" >
+                                <span class="btn like-btn " style="border: none; outline: none;" product-id="<%=item._id%>" >
                                     <% if(currentUser && currentUser.wishlist.includes(item._id)){ %>
                                         <i class="fa-solid fa-heart"></i>
                                     <% } else{ %>
