--- a/views/products/new.ejs
+++ b/views/products/new.ejs
@@ -2,7 +2,7 @@
 
 <%-include('../partials/flash')%>
 
-<div class="row"  >
+<div class="row" style="margin-top: 40px;"  >
     <div class="col-6 mx-auto card">
         <form action="/products" method="post" class="card-body  needs-validation" novalidate>
             <div class="mb-3">
