--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -6,7 +6,7 @@
 <%}%>
 
 <%if(error && error.length){%>
-    <div class="alert alert-warning alert-dismissible fade show" role="alert" style="margin-top: 10px;">
+    <div class="alert alert-warning alert-dismissible fade show ms-2" role="alert" style="margin-top: 45px;position: absolute;">
         <strong><%=error%></strong>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
