--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -18,13 +18,17 @@
             <a class="nav-link disabled" aria-disabled="true">Disabled</a>
           </li> -->
         </ul>
-        <div class="d-flex" role="search">
+        <div class="d-flex justify-content-center align-items-center" role="search">
           <% if(!currentUser){ %>
             <a href="/login" class="nav-link mx-2  ">Login</a> 
             <a href="/register" class="nav-link mx-2 ">Register</a> 
           <% } else { %>
-            <a href="#" class="nav-link text-capitalize mx-2">Hello, <%=currentUser.username%></i> 
-              <a href="/user/cart" class="nav-link mx-2" ><i class="fas fa-shopping-cart" style="color: #2e2d2d;"></i> 
+            <a href="#" class="nav-link text-capitalize mx-2"><i class="fa-solid fa-user mx-1"></i> <%=currentUser.username%></i> 
+                <div class="d-flex   justify-content-center align-items-center  mx-2">
+                  <a href="/user/wishlist" class="nav-link text-capitalize  " style="font-size: 13px;"><i class="fa-solid fa-heart mx-1" style="color: #fff;"></i>Wishlist</i> 
+                </div>
+              
+              <a href="/user/cart" class="nav-link mx-2" ><i class="fas fa-shopping-cart" style="color: #fff;"></i> 
                 <sup><span class="badge bg-danger"><%=currentUser.cart.length%></span></sup>
               
             </a>
