--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -53,7 +53,7 @@
                                 <p class="text-muted">No reviews </p>
                              <% }%>
                               <p class="card-text "><%= item.category%></p>
-                              <h6 class="card-title"><span class="fw-lighter fs-6 text-decoration-line-through">Rs.<%= item.price*2 %></span> Rs.<%= item.price %> <span class="fw-light fs-6 text-warning">( 50 % OFF )</span> </h6>
+                              <h6 class="card-title" style="font-size: 14px;"><span class="fw-lighter  text-decoration-line-through" >Rs.<%= item.price*2 %></span> Rs.<%= item.price %> <span class="fw-light  text-warning" >( 50 % OFF )</span> </h6>
                               </div>
                               
                               
